--- a/notebooks/quickstart/01-install-wizard.ipynb
+++ b/notebooks/quickstart/01-install-wizard.ipynb
@@ -179,7 +179,7 @@
    "source": [
     "import syft as sy\n",
     "sy.requires(\">=0.8.2.b0\")\n",
-    "node = sy.orchestra.launch(name=\"test-domain-1\", port=8080, dev_mode=True, reset=True)"
+    "node = sy.orchestra.launch(name=\"test-domain-1\", node_type="python", port=8080, dev_mode=True, reset=True)"
    ]
   },
   {
